--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Author URL: http://w3layouts.com
     <div class="container">
       <div class="align-items-center">
         <div class="bannerw3-content mt-lg-0 mt-4">
-          <span class="title-small">Hey!</span>
+          <span class="title-small">Hey!..</span>
           <h3 class="mb-2 title">
             <span> My name is Sapphire Smith<br>
                    <span>  I am a freelancer</span>
